// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Physical storage form component should render adding form variant 1`] = `
<div>
  <div>
    <form
      class="cds--form form-0-2-3 form-react"
      novalidate=""
    >
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="ems_id"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
            >
              *
            </span>
            Provider:
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="ems_id"
              name="ems_id"
              title=""
            >
              <option
                class="cds--select-option"
                label="<Choose>"
                value=""
              >
                &lt;Choose&gt;
              </option>
              <option
                class="cds--select-option"
                label="name1"
                value="1"
              >
                name1
              </option>
              <option
                class="cds--select-option"
                label="name2"
                value="2"
              >
                name2
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        hidden=""
      >
        <div
          class="cds--form-item cds--text-input-wrapper"
        >
          <div
            class="cds--text-input__label-wrapper"
          >
            <label
              class="cds--label cds--label--disabled"
              dir="auto"
              for="name"
            >
              Name:
            </label>
          </div>
          <div
            class="cds--text-input__field-outer-wrapper"
          >
            <div
              class="cds--text-input__field-wrapper"
            >
              <input
                class="cds--text-input"
                disabled=""
                id="name"
                name="name"
                type="text"
                value=""
              />
              
              <span
                aria-atomic="true"
                aria-live="assertive"
                class="cds--text-input__counter-alert"
                role="alert"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        hidden=""
      >
        <div
          class="cds--form-item cds--text-input-wrapper"
        >
          <div
            class="cds--text-input__label-wrapper"
          >
            <label
              class="cds--label"
              dir="auto"
              for="edit"
            >
              edit
            </label>
          </div>
          <div
            class="cds--text-input__field-outer-wrapper"
          >
            <div
              class="cds--text-input__field-wrapper"
            >
              <input
                class="cds--text-input"
                id="edit"
                name="edit"
                type="text"
                value=""
              />
              
              <span
                aria-atomic="true"
                aria-live="assertive"
                class="cds--text-input__counter-alert"
                role="alert"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="management_ip"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
            >
              *
            </span>
            Management IP:
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="management_ip"
              name="management_ip"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="user"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
            >
              *
            </span>
            User:
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="user"
              name="user"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="physical_storage_password"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
            >
              *
            </span>
            Password:
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="physical_storage_password"
              name="password"
              type="password"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <input
        name="Validate"
        type="hidden"
        value="true"
      />
      <button
        class="miq-validation-button cds--btn cds--btn--sm cds--layout--size-sm cds--btn--tertiary cds--btn--disabled"
        disabled=""
        type="button"
      >
        Validate
      </button>
      <div
        class="cds--btn-set"
      >
        <button
          class="cds--btn cds--btn--primary cds--btn--disabled"
          disabled=""
          type="submit"
          variant="primary"
        >
          Add
        </button>
        <button
          class="cds--btn cds--btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Physical storage form component should render editing form variant 1`] = `
<div>
  <div>
    <form
      class="cds--form form-0-2-3 form-react"
      novalidate=""
    >
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select cds--select--disabled"
        >
          <label
            class="cds--label cds--label--disabled"
            dir="auto"
            for="ems_id"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
            >
              *
            </span>
            Provider:
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              disabled=""
              id="ems_id"
              name="ems_id"
              title=""
            >
              <option
                class="cds--select-option"
                label="<Choose>"
                value=""
              >
                &lt;Choose&gt;
              </option>
              <option
                class="cds--select-option"
                label="name1"
                value="1"
              >
                name1
              </option>
              <option
                class="cds--select-option"
                label="name2"
                value="2"
              >
                name2
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label cds--label--disabled"
            dir="auto"
            for="name"
          >
            Name:
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              disabled=""
              id="name"
              name="name"
              type="text"
              value="svc-178"
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <fieldset
        class="cds--fieldset"
      >
        <legend
          class="cds--label"
        >
          <span
            aria-hidden="true"
            class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
          >
            *
          </span>
          Capabilities
        </legend>
        <div
          class="cds--form-item"
        >
          <fieldset
            class="cds--radio-button-group cds--radio-button-group--label-right"
            id="capabilities"
            value="Default"
          >
            <div
              class="cds--radio-button-wrapper"
            >
              <input
                checked=""
                class="cds--radio-button"
                id="radio-button-9"
                label="Default"
                name="capabilities"
                type="radio"
                value="Default"
              />
              <label
                class="cds--radio-button__label"
                for="radio-button-9"
              >
                <span
                  class="cds--radio-button__appearance"
                />
                <span
                  class="cds--radio-button__label-text"
                  dir="auto"
                >
                  Default
                  
                </span>
              </label>
            </div>
            <div
              class="cds--radio-button-wrapper"
            >
              <input
                class="cds--radio-button"
                id="radio-button-10"
                label="Custom"
                name="capabilities"
                type="radio"
                value="Custom"
              />
              <label
                class="cds--radio-button__label"
                for="radio-button-10"
              >
                <span
                  class="cds--radio-button__appearance"
                />
                <span
                  class="cds--radio-button__label-text"
                  dir="auto"
                >
                  Custom
                  
                </span>
              </label>
            </div>
          </fieldset>
          <div
            class="cds--radio-button__validation-msg"
          />
        </div>
      </fieldset>
      <div
        hidden=""
      >
        <div
          class="cds--form-item cds--text-input-wrapper"
        >
          <div
            class="cds--text-input__label-wrapper"
          >
            <label
              class="cds--label"
              dir="auto"
              for="edit"
            >
              edit
            </label>
          </div>
          <div
            class="cds--text-input__field-outer-wrapper"
          >
            <div
              class="cds--text-input__field-wrapper"
            >
              <input
                class="cds--text-input"
                id="edit"
                name="edit"
                type="text"
                value="yes"
              />
              
              <span
                aria-atomic="true"
                aria-live="assertive"
                class="cds--text-input__counter-alert"
                role="alert"
              />
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="cds--form-item cds--checkbox-wrapper"
        >
          <input
            class="cds--checkbox"
            id="edit_authentication"
            name="edit_authentication"
            type="checkbox"
            value=""
          />
          <label
            class="cds--checkbox-label"
            for="edit_authentication"
            title=""
          >
            <div
              class="cds--checkbox-label-text"
              dir="auto"
            >
              Edit Authentication
              
            </div>
          </label>
          <div
            class="cds--checkbox__validation-msg"
          />
        </div>
      </div>
      <input
        name="Validate"
        type="hidden"
        value="false"
      />
      <button
        class="miq-validation-button cds--btn cds--btn--sm cds--layout--size-sm cds--btn--tertiary cds--btn--disabled"
        disabled=""
        type="button"
      >
        Validate
      </button>
      <div
        class="cds--btn-set"
      >
        <button
          class="cds--btn cds--btn--primary cds--btn--disabled"
          disabled=""
          type="submit"
          variant="primary"
        >
          Save
        </button>
        <button
          class="cds--btn cds--btn--secondary"
          type="button"
        >
          Reset
        </button>
        <button
          class="cds--btn cds--btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;
